--- a/BangazonWorkforce/Views/Employees/Details.cshtml
+++ b/BangazonWorkforce/Views/Employees/Details.cshtml
@@ -46,5 +46,6 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
     <a asp-action="Index">Back to List</a>
 </div>
