--- a/BangazonWorkforce/Views/Employees/Details.cshtml
+++ b/BangazonWorkforce/Views/Employees/Details.cshtml
@@ -41,6 +41,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Department.Name)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Computer)
+        </dt>
+        <dd class="col-sm-10">
+            @(Model.Computer is null ? "Not Assigned" : Model.Computer.Manufacturer + ' ' + Model.Computer.Make)
+            @*@Html.DisplayFor(model => model.Computer.Make )*@
+        </dd>
 
     </dl>
 </div>
