--- a/BangazonWorkforce/Views/Departments/Index.cshtml
+++ b/BangazonWorkforce/Views/Departments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BangazonWorkforce.Models.Department>
+﻿@model IEnumerable<BangazonWorkforce.Models.ViewModels.DepartmentIndexViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Budget)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeCount)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -31,8 +34,11 @@
                 @Html.DisplayFor(modelItem => item.Budget)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.EmployeeCount)
+            </td>
+            <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
