--- a/BangazonWorkforce/Views/Departments/Details.cshtml
+++ b/BangazonWorkforce/Views/Departments/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Department.Budget)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Department.Budget)
+            @Html.DisplayFor(model => model.Department.Budget, "Currency")
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EmployeeCount)
