--- a/BangazonWorkforce/Views/Departments/Index.cshtml
+++ b/BangazonWorkforce/Views/Departments/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Budget)
+                @Html.DisplayFor(modelItem => item.Budget, "Currency")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EmployeeCount)
