--- a/BangazonWorkforce/Views/Shared/_Layout.cshtml
+++ b/BangazonWorkforce/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Computers</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Computers" asp-action="Index">Computers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Training Programs</a>
